<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".SeeConnection">
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment">
    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
        android:background="@color/purple_500">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/see_connections"
        android:layout_marginTop="16dp"
        android:textColor="@color/white"
        android:gravity="top"
        android:backgroundTint="@color/purple_500"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="24dp"
        android:textAppearance="@style/page_title" />


        <ImageView
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="350dp"
            android:contentDescription="@string/add"
            android:src="@drawable/ic_baseline_add_24" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="60dp">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_marginTop="30dp"
        android:hint="@string/first_node"
        android:layout_marginHorizontal="20dp"
        android:id="@+id/first_contain"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/first"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLength="2"
            android:backgroundTint="@color/white"
            android:inputType="number"
            android:textColorHint="#757575"
            tools:ignore="TextContrastCheck">

        </com.google.android.material.textfield.TextInputEditText>


    </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="4dp"
            android:backgroundTint="@color/white"
            android:gravity="center_horizontal"
            android:minHeight="48dp"
            android:text="@string/type_a_number_from_0_to_20"
            android:textColor="@color/black"
            android:textStyle="normal" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:id="@+id/Second_contain"
            android:layout_marginHorizontal="20dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:hint="@string/second_node"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Second"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxLength="2"
                android:backgroundTint="@color/white"
                android:inputType="number"
                android:textColorHint="#757575"
                tools:ignore="TextContrastCheck">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textColor="@color/black"
            android:text="@string/type_a_number_from_0_to_20"
            android:gravity="center_horizontal"
            android:backgroundTint="@color/white"
            app:helperTextTextColor="@color/red"
            android:layout_marginStart="50dp" />

            <Button
                android:id="@+id/Check"
                android:text="@string/check_connection"
                android:layout_width="wrap_content"
                android:layout_margin="20dp"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_baseline_remove_red_eye_24"
                android:textAlignment="viewStart"
                 />
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/connect"
            android:layout_marginHorizontal="20dp"
            android:textStyle="bold"
            android:visibility="invisible"
            android:textColor="@color/black"
            android:textSize="25sp"
            />
        <TextView
        android:layout_height="wrap_content"
        android:layout_width="300dp"
        android:layout_marginTop="4dp"
        android:visibility="invisible"
        android:layout_marginHorizontal="20dp"
        android:id="@+id/info"
        android:text="@string/INFO"
            />
    </LinearLayout>
</FrameLayout>
</LinearLayout>
